--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "rollup-plugin-doc-vue",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "md2vue",
+  "version": "0.1.0",
+  "main": "./dist/md2vue.common.js",
+  "module": "dist/md2vue.esm.js",
   "repository": {
-    "url": "git@github.com:AngusFu/rollup-plugin-do-vue.git",
+    "url": "git@github.com:AngusFu/md2vue.git",
     "type": "git"
   },
   "author": "wemlion <angusfu1126@qq.com>",
@@ -11,14 +12,16 @@
   "dependencies": {
     "buble": "^0.15.2",
     "marked": "^0.3.6",
-    "vue-component-compiler": "^2.0.0"
+    "vueify": "^9.4.1"
   },
   "devDependencies": {
     "rollup": "^0.47.4",
     "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-commonjs": "^8.1.0",
     "rollup-plugin-node-resolve": "^3.0.0"
   },
   "scripts": {
-    "start": "rollup -c rollup.config.js"
+    "start": "rollup -c rollup.config.js -w",
+    "build": "rollup -c rollup.config.js"
   }
 }
