--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "vueify": "^9.4.1"
   },
   "devDependencies": {
-    "gh-pages": "^1.0.0",
     "rollup": "^0.47.4",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-commonjs": "^8.1.0",
@@ -26,7 +25,6 @@
   "scripts": {
     "start": "rollup -c rollup.config.js -w",
     "build": "rollup -c rollup.config.js",
-    "preview": "npm run build && node test/ ./demo && live-server ./demo",
-    "deploy": "npm run build && node test/ ./demo && gh-pages -d demo"
+    "preview": "npm run build && node test/ ./docs && live-server ./docs"
   }
 }
