--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "highlight.js": "^9.12.0",
     "indent": "0.0.2",
     "marked": "^0.3.6",
-    "vueify": "^9.4.1"
+    "vueify": "^9.4.1",
+    "yaml-front-matter": "^3.4.0"
   },
   "devDependencies": {
     "rollup": "^0.47.4",
