--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md2vue",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "main": "./dist/md2vue.common.js",
   "module": "dist/md2vue.esm.js",
   "repository": {
@@ -14,7 +14,7 @@
     "highlight.js": "^9.12.0",
     "indent": "0.0.2",
     "marked": "^0.3.6",
-    "vueify": "^9.4.1"
+    "vueify": "github:AngusFu/vueify"
   },
   "devDependencies": {
     "rollup": "^0.47.4",
