--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md2vue",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "main": "./dist/md2vue.common.js",
   "module": "dist/md2vue.esm.js",
   "repository": {
@@ -14,6 +14,7 @@
     "highlight.js": "^9.12.0",
     "indent": "0.0.2",
     "marked": "^0.3.6",
+    "prismjs": "^1.8.4",
     "vueify": "github:AngusFu/vueify"
   },
   "devDependencies": {
