--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "highlight.js": "^9.12.0",
     "indent": "0.0.2",
     "inspect-f": "^1.2.2",
-    "lodash-es": "^4.17.10",
+    "lodash": "^4.17.10",
     "marked": "^0.3.6",
     "nodent": "^3.2.6",
     "prettier": "^1.13.6",
