--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "indent": "0.0.2",
     "inspect-f": "^1.2.2",
     "lodash": "^4.17.10",
-    "marked": "^0.3.6",
     "nodent": "^3.2.6",
     "prettier": "^1.13.6",
     "prismjs": "^1.8.4",
+    "remark": "^9.0.0",
+    "remark-html": "^7.0.0",
+    "unist-util-visit": "^1.3.1",
     "vueify": "^9.4.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "jest": "^21.2.1",
     "rollup": "^0.47.4",
     "rollup-plugin-buble": "^0.15.0",
