--- a/package.json
+++ b/package.json
@@ -1,46 +1,52 @@
 {
   "name": "md2vue",
-  "version": "4.0.0-beta.1",
-  "main": "./dist/md2vue.common.js",
-  "module": "dist/md2vue.esm.js",
+  "version": "5.0.0",
+  "description": "",
+  "main": "lib/index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
-    "url": "git@github.com:AngusFu/md2vue.git",
-    "type": "git"
+    "type": "git",
+    "url": "git+https://github.com/AngusFu/md2vue.git"
   },
   "author": "wemlion <angusfu1126@qq.com>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/AngusFu/md2vue/issues"
+  },
+  "homepage": "https://github.com/AngusFu/md2vue#readme",
   "dependencies": {
-    "buble": "^0.15.2",
-    "highlight.js": "^9.12.0",
-    "indent": "0.0.2",
-    "inspect-f": "^1.2.2",
-    "lodash": "^4.17.10",
-    "nodent": "^3.2.6",
-    "prettier": "^1.13.6",
-    "prismjs": "^1.8.4",
-    "remark": "^9.0.0",
-    "remark-html": "^7.0.0",
-    "unist-util-visit": "^1.3.1",
-    "vueify": "^9.4.1"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "jest": "^21.2.1",
-    "rollup": "^0.47.4",
-    "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-commonjs": "^8.1.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-nodent": "^0.2.2"
-  },
-  "scripts": {
-    "watch-build": "rollup -c rollup.config.js -w",
-    "build": "rollup -c rollup.config.js && node ./build-doc.js",
-    "test": "jest --coverage"
+    "chalk": "^2.4.1",
+    "classnames": "^2.2.6",
+    "hast-util-select": "^2.1.0",
+    "js-yaml": "^3.12.0",
+    "mdast-util-to-string": "^1.0.4",
+    "rehype-format": "^2.3.0",
+    "rehype-highlight": "^2.1.0",
+    "rehype-katex": "^1.1.1",
+    "rehype-stringify": "^4.0.0",
+    "remark-autolink-headings": "^5.0.0",
+    "remark-external-links": "^2.0.0",
+    "remark-frontmatter": "^1.2.0",
+    "remark-math": "^1.0.4",
+    "remark-normalize-headings": "^1.0.0",
+    "remark-parse": "^5.0.0",
+    "remark-rehype": "^3.0.0",
+    "rollup": "^0.63.5",
+    "rollup-plugin-vue": "^4.3.2",
+    "to-vfile": "^5.0.0",
+    "toml": "^2.3.3",
+    "transliteration": "^1.6.6",
+    "unified": "^7.0.0",
+    "unist-util-is": "^2.1.2",
+    "unist-util-select": "^1.5.0",
+    "unist-util-source": "^1.0.3",
+    "unist-util-visit": "^1.4.0",
+    "vue-template-compiler": "^2.5.17",
+    "vue-template-es2015-compiler": "^1.6.0"
   },
   "optionalDependencies": {
-    "less": "^3.0.4",
-    "node-sass": "^4.9.0",
     "pug": "^2.0.3",
     "stylus": "^0.54.5"
   }
