--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md2vue",
-  "version": "5.0.0",
+  "version": "5.0.0-alpha.1",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
