--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rehype-format": "^2.3.0",
     "rehype-highlight": "^2.1.0",
     "rehype-katex": "^1.1.1",
+    "rehype-raw": "^3.0.0",
     "rehype-stringify": "^4.0.0",
     "remark-autolink-headings": "^5.0.0",
     "remark-external-links": "^2.0.0",
