--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "rehype-katex": "^1.1.1",
     "rehype-raw": "^3.0.0",
     "rehype-stringify": "^4.0.0",
+    "remark-attr": "^0.6.2",
     "remark-autolink-headings": "^5.0.0",
     "remark-external-links": "^2.0.0",
     "remark-frontmatter": "^1.2.0",
