--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "remark-parse": "^5.0.0",
     "remark-rehype": "^3.0.0",
     "rollup": "^0.63.5",
+    "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-vue": "3.0.0",
     "to-vfile": "^5.0.0",
     "toml": "^2.3.3",
@@ -45,8 +46,8 @@
     "unist-util-select": "^1.5.0",
     "unist-util-source": "^1.0.3",
     "unist-util-visit": "^1.4.0",
-    "vue-template-compiler": "^2.5.17",
-    "vue-template-es2015-compiler": "^1.6.0"
+    "vue-template-compiler": "^2.6.7",
+    "vue-template-es2015-compiler": "^1.9.1"
   },
   "optionalDependencies": {
     "pug": "^2.0.3",
