--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "commit": "npx git-cz",
+    "release": "npx standard-version",
+    "lint": "eslint ./lib",
+    "lint:fix": "eslint --fix --ext .js,.jsx ./lib",
+    "format": "pretty-quick --pattern \"**/*.*(js|jsx)\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AngusFu/md2vue.git"
-  },
+  "repository": "git+https://github.com/AngusFu/md2vue.git",
   "author": "wemlion <angusfu1126@qq.com>",
   "license": "MIT",
   "bugs": {
@@ -54,9 +56,48 @@
     "stylus": "^0.54.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
     "@vue/test-utils": "^1.0.0-beta.24",
+    "babel-eslint": "^10.0.1",
+    "commitizen": "^3.0.7",
+    "cz-conventional-changelog": "^2.1.0",
+    "eslint": "^5.15.1",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-formatter-friendly": "^6.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "husky": "^1.3.1",
     "jest": "^23.5.0",
-    "standard-version": "^5.0.0",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.16.4",
+    "pretty-quick": "^1.10.0",
+    "standard-version": "^5.0.1",
     "vue": "^2.5.17"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "pretty-quick --staged && lint-staged"
+    }
+  },
+  "lint-staged": {
+    "linters": {
+      "*.{js,jsx}": [
+        "eslint --format friendly"
+      ]
+    },
+    "ignore": [
+      "**/dist/*.js"
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
