--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@commitlint/cli": "^7.5.2",
     "@commitlint/config-conventional": "^7.5.0",
+    "@mapbox/rehype-prism": "^0.3.1",
     "@vue/test-utils": "^1.0.0-beta.24",
     "babel-eslint": "^10.0.1",
     "commitizen": "^3.0.7",
