--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   },
   "homepage": "https://github.com/AngusFu/md2vue#readme",
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.3.1",
     "chalk": "^2.4.1",
     "classnames": "^2.2.6",
     "hast-util-select": "^2.1.0",
-    "js-yaml": "^3.12.0",
+    "js-yaml": "^3.13.1",
     "mdast-util-to-string": "^1.0.4",
     "rehype-format": "^2.3.0",
     "rehype-highlight": "^2.1.0",
@@ -39,7 +40,7 @@
     "remark-rehype": "^3.0.0",
     "rollup": "^0.63.5",
     "rollup-plugin-commonjs": "^9.2.1",
-    "rollup-plugin-vue": "3.0.0",
+    "rollup-plugin-vue": "^5.0.1",
     "to-vfile": "^5.0.0",
     "toml": "^2.3.3",
     "transliteration": "^1.6.6",
@@ -59,7 +60,6 @@
   "devDependencies": {
     "@commitlint/cli": "^7.5.2",
     "@commitlint/config-conventional": "^7.5.0",
-    "@mapbox/rehype-prism": "^0.3.1",
     "@vue/test-utils": "^1.0.0-beta.24",
     "babel-eslint": "^10.0.1",
     "commitizen": "^3.0.7",
@@ -69,7 +69,7 @@
     "eslint-formatter-friendly": "^6.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "husky": "^1.3.1",
-    "jest": "^23.5.0",
+    "jest": "^24.8.0",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
