--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "remark-rehype": "^3.0.0",
     "rollup": "^0.63.5",
     "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-css-only": "^1.0.0",
     "rollup-plugin-vue": "^5.0.1",
     "to-vfile": "^5.0.0",
     "toml": "^2.3.3",
