--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "remark-normalize-headings": "^1.0.0",
     "remark-parse": "^7.0.0",
     "remark-rehype": "^5.0.0",
-    "rollup": "^0.63.5",
-    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup": "^1.26.0",
+    "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-css-only": "^1.0.0",
-    "rollup-plugin-vue": "^5.0.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-vue": "^5.1.2",
     "to-vfile": "^5.0.0",
     "toml": "^2.3.3",
     "transliteration": "^1.6.6",
@@ -51,6 +52,7 @@
     "unist-util-source": "^1.0.3",
     "unist-util-visit": "^1.4.0",
     "vfile": "^4.0.0",
+    "vue-runtime-helpers": "^1.1.2",
     "vue-template-compiler": "^2.6.7",
     "vue-template-es2015-compiler": "^1.9.1"
   },
@@ -59,7 +61,7 @@
     "stylus": "^0.54.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "7.6.1",
+    "@commitlint/cli": "^8.3.3",
     "@commitlint/config-conventional": "7.6.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "10.0.3",
